--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
-  <script src="./FP-QuestionSet3/FP-QuestionSet3.js"></script>
+  <body>
+    <div>
+      <p id="output"></p>
+    </div>
+  </body>
+  <script src="./AsyncJSQuestionSet1/AsyncJSQuestionSet1.js"></script>
 </html>
